syntax = "proto3";

option go_package = "github.com/meeron/honey-badger/pb";

package pb;

service HoneyBadger {
    rpc Set(SetRequest) returns (Result) {}
    rpc Get(GetRequest) returns (GetResult) {}
}

message SetRequest {
    string db = 1;
    string key = 2;
    bytes data = 3;
    optional int32 ttl = 4;
}

message GetRequest {
    string db = 1;
    string key = 2;
}

message GetResult {
    bool hit = 1;
    bytes data = 2;
}

message Result {
    string code = 1;
    optional string error = 2;
}